<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoosing_title_text"
        android:padding="5dp"/>
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_margin="15dp">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/_1_5"
        />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_15" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_100" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_150" />
</RadioGroup>
    <Button
        android:id="@+id/buttonChoosePay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:paddingTop="10dp"
        android:background="#61c1f1"/>

</LinearLayout>