<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:text="@string/preview"
        android:textColor="#dd4225" />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/name"
        android:textColor="#dd4225" />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />


    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/adress"
        android:textColor="#dd4225" />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />

    <EditText
        android:id="@+id/edMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:layout_marginTop="15dp"
        android:text="@string/phone"
        android:textColor="#dd4225" />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />

    <EditText
        android:id="@+id/edTelephon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/descr_order"
        android:textColor="#dd4225" />
    <View android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="4dp"
        android:background="#666666" />

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_order"
        android:background="#aa55dd99"
        android:id="@+id/buttonSendOrder"/>

</LinearLayout>