<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/enable_cash"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:checked="true"

        />
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"/>
     <EditText
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:focusedByDefault="true"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:textColor="#000000"
         android:id="@+id/edit_aserts"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_one"
            android:textColor="#000000"/>

    </LinearLayout>

    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="#41a1c1"
        android:layout_gravity="center"
        android:text="@string/ready"
        android:textColor="#ffffff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/sendToOrder"/>
</LinearLayout></ScrollView>