<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="3dp"
    android:background="@android:drawable/dialog_holo_light_frame"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:padding="5dp"
            android:layout_margin="3dp">

            <TextView
                android:id="@+id/enterprise_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="2dp"

                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:padding="3dp"
                android:text="@string/enterprise_name"
                android:textColor="@color/colorBlue"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" />


            <ImageView
                android:id="@+id/iccity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="3dp"
                android:padding="3dp"
                android:src="@drawable/ic_location_city_black_48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterprise_name"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/ictelephon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:padding="0dp"
                android:src="@drawable/ic_call_black_48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iccity" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="6dp"
                android:padding="2dp"
                android:text="@string/city"
                app:layout_constraintLeft_toRightOf="@+id/iccity"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/enterprise_name"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/telephon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"

                android:layout_marginRight="8dp"


                android:layout_marginTop="1dp"
                android:paddingTop="6dp"
                android:paddingLeft="2dp"
                android:text="@string/telephon"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/ictelephon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/city"
                app:layout_constraintTop_toTopOf="@+id/ictelephon" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>